--- a/index.html
+++ b/index.html
@@ -12,37 +12,37 @@
     <h1 class="text-center">Calculate Me!</h1>
     <div class="container mx-auto flex flex-col items-center">
         <div class="row">
-            <input type="text" class="input">
+            <input type="text" class="input" value="0">
         </div>
         <div class="row">
-            <button class="button">C</button>
-            <button class="button">%</button>
-            <button class="button">M+</button>
-            <button class="button">-</button>
+            <button class="button operator">C</button>
+            <button class="button operator">%</button>
+            <button class="button operator">M+</button>
+            <button class="button operator">-</button>
         </div>
         <div class="row">
             <button class="button">7</button>
             <button class="button">8</button>
             <button class="button">9</button>
-            <button class="button">+</button>
+            <button class="button operator">+</button>
         </div>
         <div class="row">
             <button class="button">4</button>
             <button class="button">5</button>
             <button class="button">6</button>
-            <button class="button">/</button>
+            <button class="button operator">/</button>
         </div>
         <div class="row">
             <button class="button">1</button>
             <button class="button">2</button>
             <button class="button">3</button>
-            <button class="button">*</button>
+            <button class="button operator">*</button>
         </div>
         <div class="row">
             <button class="button">0</button>
             <button class="button">00</button>
-            <button class="button">.</button>
-            <button class="button">=</button>
+            <button class="button ">.</button>
+            <button class="button equalBtn">=</button>
         </div>
     </div>
     <script src="script.js"></script>
